# stirr-a2ui

./: .env.example  .gitignore  CLAUDE.md  README.md  STIRR-Discover-Plugin-Brief.docx  TASKS.md  github-issue.md  run-a2ui-demo.sh  stirr-claude-app.plugin  stirr-discover-artifact.html  stirr-discover-demo.html  stirr-discover-demo.jsx  video-test.html
agent/: .env.example  agent_executor.py  intent.py  moment.py  prompt_builder.py  pyproject.toml  requirements-query-only.txt  requirements.txt  run_server.py  setup.sh  stirr_content_agent.py  test_tools.py  tools.py
catalog/: stirr_catalog.json
docs/: local-news-market-pages-spec.md
scripts/: run-a2ui-lit-demo.sh
